<resources>
    <string name="app_name">SmartDevice</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="sharehinttext_pmsf"><Data><![CDATA[<font color="#4E8FE1">生成您的分享码，<br/>亲友扫码下单</font><font color="#FF0000"> %s</font><font color="#4E8FE1"> 。<br/></font><font color="#FF0000"> 您将获得“分享积分” <br/> 兑换超值好礼！</font>]]></Data></string>
    <string name="sharehinttext_ex_pmsf">亲友每购买1台， 您将获得1000积分。 买得越多，积分越多。</string>
    <string name="sharehinttext_go_pmsf">请输入您的手机号，生成您的分享码， 获取分享积分吧！</string>
    <string name="submit">提交</string>
    <string name="thisisyour">这是您的专属</string>
    <string name="sharecode_text_pmsf">分享码</string>
    <string name="sharetext_friend_text_pmsf"><Data><![CDATA[<font color="#000000">推荐亲友扫描下方“分享码”下单，<br/>亲友可享</font><font color="#FF0000">%s</font>]]></Data></string>
    <string name="current_point_hint">我的积分:</string>
    <string name="back_childfgm_text">返回商城首页</string>
    <string name="my_order_text">我的订单</string>
    <string name="shoplist_hint_text_pmsf">热门兑换礼品</string>
    <string name="shoplist_hint_text_pmsf2">无可兑换礼品</string>
    <string name="score_text">积分</string>
    <string name="todo_buybtn_text">立即兑换</string>
    <string name="buy_score_text_pmsf"><Data><![CDATA[<font color="#9B9B9B">共%d件，</font><font color="#333333">合计：</font><font color="#FF0000">%d分</font>]]></Data></string>
    <string name="product_name_pmsf">产品名称：</string>
    <string name="wayof_deliver_pmsf">配送方式：</string>
    <string name="baoyou">快递 包邮</string>
    <string name="select_count_pmsf">选择数量：</string>
    <string name="please_number_pmsf">请确认收货人电话：</string>
    <string name="please_area_pmsf">请选择地区：</string>
    <string name="click_toselect_pmsf">点击选择</string>
    <string name="please_select_area_pmsf">请选择地区：</string>
    <string name="click_toinput_pmsf">点击输入</string>
    <string name="submit_order_pmsf">提交订单</string>
    <string name="current_score_pmsf">当前剩余积分：%d</string>
    <string name="success_order_pmsf">订单提交成功</string>
    <string name="please_wait_pmsf">我们将尽快为您发货 请耐心等待！</string>
    <string name="rexian_pmsf">任何问题可联系客服热线</string>
    <string name="sure">确定</string>
    <string name="phone_isright_pmsf">请确认号码是否正确？</string>
    <string name="error_noscore_pmsf">号码错误将无法获得积分和兑换礼品</string>
    <string name="cancel">取消</string>
    <string name="noscore_tex_pmsf">积分不足</string>
    <string name="please_mod_order_pmsf">请修改订单</string>
    <string name="current_score_tex_pmsf">当前可用积分：%d</string>
    <string name="no_number">没有输入手机号码</string>
    <string name="cannot_shop">无法使用积分商城</string>
    <string name="please_phone_right">请输入正确的手机号</string>
    <string name="data_fromate_text_pmsf">下单时间：yyyy.MM.dd HH:mm</string>
    <string name="count_fromate_text_pmsf">数量：%d</string>
    <string name="score_allfromat_text_pmsf">合计：%d积分</string>
    <string name="prefix_price_pmsf">市场价：%d元</string>
    <string name="prefix_number_pmsf">分享码绑定手机号：%s</string>
    <string name="no_address_pmsf">尚未选择地址</string>
    <string name="no_address_detail_pmsf">地址不能为空</string>
    <string name="nocanjian_pmsf">再减就没了</string>
    <string name="address_detail">详细地址：</string>
    <string name="reciver_phone">收货人电话</string>
    <string name="remen_text_hint_pmsf">热门兑换礼品</string>
    <string name="more_shop_hint_pmsf"><![CDATA[查看更多 >]]></string>
    <string name="toshop_btn_text_pmsf">进入积分商城</string>
    <string name="ex_score_text">兑换积分</string>
    <string name="shop_index_pmsf">积分商城首页</string>
    <string name="my_score_text_title_pmsf">我的分享积分</string>
    <string name="toexchange_text_pmsf">立即兑换</string>
    <string name="back_pr_page_pmsf">返回上一页</string>
    <string name="title_my_order_v2_pmsf">查看我的订单</string>
    <string name="t1_pmsf">联系客服请拨打：</string>
    <string name="t2_pmsf">400-001-6286</string>
    <string name="t3_pmsf">回到测量首页</string>
    <string name="t4_pmsf">回到积分有礼</string>
    <string name="pripage">上一页</string>
    <string name="next_page">下一页</string>
    <string name="select_count_text_pmsf">选择数量:</string>
    <string name="product_d">产品描述</string>
    <string name="please_revivername_pmsf">收件人姓名</string>
    <string name="no_recivername_detail_pmsf">收件人不能为空</string>
    <string name="tomeasu_text_pmsf">我要去测量</string>
    <string name="toshop_text_pmsf">回到积分商城首页</string>
    <string name="tomyorder_text_pmsf">回到我的订单</string>
    <string name="right_pmsf"><![CDATA[<]]></string>
    <string name="todetail_text_pmsf">查看详情</string>
    <string name="score_text_pmsf">兑换积分</string>
</resources>