<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/success_order_pmsf"
            android:textColor="@color/text_title_pmsf"
            android:textSize="21sp">

        </TextView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:gravity="center"
            android:maxWidth="155sp"
            android:text="@string/please_wait_pmsf"
            android:textColor="@color/text_primary_pmsf"
            android:textSize="17sp">

        </TextView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/rexian_pmsf"
            android:textColor="@color/primary_pmsf"
            android:textSize="17sp">

        </TextView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="400-001-6286"
            android:textColor="@color/primary_pmsf"
            android:textSize="22sp" />

        <Button
            android:id="@+id/submit"
            android:layout_width="70dp"
            android:layout_height="25dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/btn_pmsf"
            android:text="@string/sure"
            android:textColor="@color/white_pmsf"
            android:textSize="11sp" />
    </LinearLayout>
</FrameLayout>