<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/dialog_bg"
    android:gravity="center"
    android:minWidth="366dp"
    android:minHeight="170dp"
    android:orientation="vertical">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/noscore_tex_pmsf"
        android:textColor="@color/text_primary_pmsf"
        android:textSize="21sp" />

    <TextView
        android:id="@+id/hinttext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/please_mod_order_pmsf"
        android:textColor="@color/text_primary_pmsf"
        android:textSize="21sp">
    </TextView>

    <TextView
        android:id="@+id/hinttext2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/current_score_tex_pmsf"
        android:textColor="@color/text_primary_pmsf"
        android:textSize="17sp">
    </TextView>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_marginTop="20dp"
        android:background="@android:color/transparent">
    </View>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/sure"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:textColor="@color/text_primary_pmsf"
            android:textSize="13sp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:text="@string/sure">
        </TextView>
    </LinearLayout>

</LinearLayout>