<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/dialog_bg"
    android:gravity="center"
    android:minWidth="300dp"
    android:minHeight="120dp"
    android:orientation="vertical">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/no_number"
        android:textColor="@color/text_primary_pmsf"
        android:textSize="21sp" />


    <TextView
        android:id="@+id/hinttext2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cannot_shop"
        android:textColor="@color/text_primary_pmsf"
        android:textSize="17sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_marginTop="22dp"
        android:background="@color/line_pmsf" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/sure"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@color/text_primary_pmsf"
            android:textSize="13sp"
            android:gravity="center"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:text="@string/sure">

        </TextView>
    </LinearLayout>

</LinearLayout>