<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/dialog_bg"
    android:gravity="center"
    android:minWidth="360dp"
    android:orientation="vertical">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:layout_marginTop="30dp"
        android:text="13212341234"
        android:textColor="@color/text_primary_pmsf"
        android:textSize="21sp">

    </TextView>

    <TextView
        android:id="@+id/hinttext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginStart="3dp"
        android:text="@string/phone_isright_pmsf"
        android:textColor="@color/text_primary_pmsf"
        android:textSize="17sp">

    </TextView>

    <TextView
        android:id="@+id/hinttext2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/error_noscore_pmsf"
        android:textColor="@color/text_primary_pmsf"

        android:textSize="17sp">

    </TextView>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_marginTop="22dp"
        android:background="@color/line_pmsf">

    </View>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:orientation="horizontal">


        <TextView
            android:id="@+id/cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:textColor="@color/text_primary_pmsf"
            android:textSize="13sp"
            android:text="@string/cancel" />

        <View
            android:id="@+id/line"
            android:layout_width="1px"
            android:layout_height="match_parent"
            android:background="@color/line_pmsf" />

        <TextView
            android:id="@+id/sure"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@color/text_primary_pmsf"
            android:textSize="13sp"
            android:gravity="center"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:text="@string/sure">

        </TextView>
    </LinearLayout>

</LinearLayout>