<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <FrameLayout
            android:id="@+id/leftlay"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/white_pmsf">

            <LinearLayout
                android:id="@+id/leftlay_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:orientation="vertical"
                android:visibility="gone">

                <TextView
                    android:id="@+id/html2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:minHeight="70dp"
                    android:text="@string/sharehinttext_pmsf"
                    android:textSize="13sp">

                </TextView>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    android:maxWidth="104dp"
                    android:text="@string/sharehinttext_ex_pmsf"
                    android:textColor="@color/text_primary_pmsf"
                    android:textSize="11sp">

                </TextView>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1px"
                    android:layout_marginTop="12dp"
                    android:background="@color/line2_pmsf">

                </View>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:gravity="center"
                    android:maxWidth="156dp"
                    android:text="@string/sharehinttext_go_pmsf"
                    android:textColor="@color/primary_pmsf"
                    android:textSize="10sp">

                </TextView>

                <EditText
                    android:id="@+id/edit_phone"
                    android:layout_width="164dp"
                    android:layout_height="20dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/edit_pmsf"
                    android:inputType="phone"
                    android:paddingStart="15dp"
                    android:paddingEnd="15dp"
                    android:textColor="@color/text_primary_pmsf"
                    android:textSize="11sp">

                </EditText>

                <Button
                    android:id="@+id/btn"
                    android:layout_width="wrap_content"
                    android:minWidth="76dp"
                    android:minHeight="22dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/btn_pmsf"
                    android:gravity="center"
                    android:text="@string/submit"
                    android:textColor="@color/white_pmsf"
                    android:textSize="12sp">

                </Button>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/leftlay_qr"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:orientation="vertical"
                android:visibility="visible">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/thisisyour"
                    android:textColor="@color/primary_pmsf"
                    android:textSize="15sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sharecode_text_pmsf"
                    android:textColor="@color/primary_pmsf"
                    android:textSize="29sp">

                </TextView>

                <TextView
                    android:id="@+id/html1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    android:minHeight="30dp"
                    android:maxHeight="50dp"
                    android:text="@string/sharetext_friend_text_pmsf"
                    android:textColor="@color/text_primary_pmsf"
                    android:textSize="12sp">

                </TextView>

                <ImageView
                    android:id="@+id/qr_image"
                    android:layout_width="105dp"
                    android:layout_height="105dp"
                    android:layout_marginTop="10dp" />

                <TextView
                    android:id="@+id/texthint_phone"

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/prefix_number_pmsf"
                    android:textColor="@color/primary_pmsf"
                    android:textSize="11sp">

                </TextView>
            </LinearLayout>
        </FrameLayout>

        <LinearLayout
            android:layout_width="282dp"
            android:layout_height="match_parent"
            android:layout_marginStart="5dp"
            android:background="@color/white_pmsf"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="46dp"
                android:background="@drawable/head_right_pmsf"

                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="7dp"
                    android:text="@string/current_point_hint"
                    android:textColor="@color/white_pmsf"
                    android:textSize="12sp">

                </TextView>

                <TextView
                    android:id="@+id/point_score"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="2dp"
                    android:layout_weight="1"
                    android:text="60000"
                    android:textColor="@color/white_pmsf"
                    android:textSize="24sp">

                </TextView>

                <TextView
                    android:id="@+id/back_childfgm_text"
                    android:layout_width="wrap_content"
                    android:layout_height="20dp"
                    android:background="@drawable/back_childfgm_pmsf"
                    android:gravity="center"
                    android:paddingStart="5dp"
                    android:paddingEnd="5dp"
                    android:text="@string/back_childfgm_text"
                    android:textColor="@color/white_pmsf"
                    android:textSize="10sp">

                </TextView>

                <TextView
                    android:id="@+id/my_order_text"
                    android:layout_width="wrap_content"
                    android:layout_height="18dp"
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="10dp"
                    android:background="@drawable/my_order_text_pmsf"
                    android:gravity="center"
                    android:paddingStart="5dp"
                    android:paddingEnd="5dp"
                    android:text="@string/my_order_text"
                    android:textColor="@color/white_pmsf"
                    android:textSize="10sp">

                </TextView>
            </LinearLayout>

            <FrameLayout
                android:id="@+id/child_fm_lay"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            </FrameLayout>
        </LinearLayout>
    </LinearLayout>

    <FrameLayout
        android:id="@+id/progress"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:focusableInTouchMode="true"
        android:background="@color/primary_pmsf_ripple"
        android:clickable="true"
        android:focusable="true">

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:indeterminate="true" />
    </FrameLayout>
</FrameLayout>

